fixed restoring game window (client core main?) fixed gui cursor visibility set from scripts (do not hide cursor when switching from menu/chatbox if any script shown cursor.) Fixed sdk project file (now compiles).todo: linux makefile

--- a/Binary/sdk/ivmp_sdk_module/ivmp_sdk_module.vcxproj
+++ b/Binary/sdk/ivmp_sdk_module/ivmp_sdk_module.vcxproj
@@ -82,7 +82,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>$(ProjectDir)/SDK;../../../Shared;../../../Server/Core;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>SDK/Shared;SDK</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
