--- a/Client/Core/Client.Core.vcxproj.filters
+++ b/Client/Core/Client.Core.vcxproj.filters
@@ -711,7 +711,7 @@
     <ClInclude Include="CTrains.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
-    <ClInclude Include="CCrashFixes.h">
+    <ClInclude Include="CHooks.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
   </ItemGroup>
@@ -1157,7 +1157,7 @@
     <ClCompile Include="CTrains.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
-    <ClCompile Include="CCrashFixes.cpp">
+    <ClCompile Include="CHooks.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
   </ItemGroup>
