-Fixed again compile stuff

--- a/Client/CrashReporter/Client.CrashReporter.vcxproj
+++ b/Client/CrashReporter/Client.CrashReporter.vcxproj
@@ -57,6 +57,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+      <PreprocessorDefinitions>WIN_32;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
