--- a/Client/Core/Client.Core.vcxproj
+++ b/Client/Core/Client.Core.vcxproj
@@ -126,6 +126,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AimSync.h" />
+    <ClInclude Include="CFileHook.h" />
     <ClInclude Include="CHooks.h" />
     <ClInclude Include="CD3D9Webkit.hpp" />
     <ClInclude Include="AnimGroups.h" />
@@ -308,6 +309,7 @@
   <ItemGroup>
     <ClCompile Include="AimSync.cpp" />
     <ClCompile Include="C3DLabels.cpp" />
+    <ClCompile Include="CFileHook.cpp" />
     <ClCompile Include="CHooks.cpp" />
     <ClCompile Include="CDebugView.cpp" />
     <ClCompile Include="CIVTrain.cpp" />
