Added CIKManager::LookAt hook in AimSync.cpp. Removed some test code from CActorManager::Create and CNetworkPlayer::Create. Fixed d3d resource management in CGraphics.cpp. Documented some more game structures stuff. Changed addresses in CIVPhysical to use COffsets class. Fixed CIVPhysical::SetLastDamageEntity to use game function. Added info for CTaskSimpleTriggerLookAt. Temporarily disabled on foot sync changes. Added _CRT_SECURE_NO_WARNINGS and _CRT_SECURE_NO_DEPRECATE definitions to CrashReporter project preprocessor definitions to fix warnings.

--- a/Client/CrashReporter/Client.CrashReporter.vcxproj
+++ b/Client/CrashReporter/Client.CrashReporter.vcxproj
@@ -50,7 +50,7 @@
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>..\..\Shared;.\CEGUI\cegui\include;..\..\Vendor\zlib-1.2.5;..\..\Vendor\DXSDK\include;..\..\Vendor\bass; ..\..\Vendor;..\..\Vendor\Squirrel;..\..\Client\Core\EA;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
-      <PreprocessorDefinitions>WIN_32;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN_32;WIN32;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -62,7 +62,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN_32;WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN_32;WIN32;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
