Re-made the client file downloader. Merged all the file add rpcs on server connect. Cleaned up some code. Fixed extra read from bit stream in client connect rpc (Float).

--- a/Client/CrashReporter/Client.CrashReporter.vcxproj
+++ b/Client/CrashReporter/Client.CrashReporter.vcxproj
@@ -18,7 +18,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>NotSet</CharacterSet>
     <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -40,9 +40,12 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)Binary\</OutDir>
-    <TargetName>crashreporter</TargetName>
+    <TargetName>$(ProjectName)</TargetName>
     <IncludePath>..\..\Shared;$(IncludePath)</IncludePath>
     <ReferencePath>..\..\Shared\;$(ReferencePath)</ReferencePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <OutDir>$(SolutionDir)Binary\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
