--- a/Client/Core/Client.Core.vcxproj.filters
+++ b/Client/Core/Client.Core.vcxproj.filters
@@ -714,6 +714,9 @@
     <ClInclude Include="CHooks.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
+    <ClInclude Include="CFileTransferManager.h">
+      <Filter>Header Files\Network</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Commands.cpp">
@@ -1162,6 +1165,9 @@
     </ClCompile>
     <ClCompile Include="C3DLabels.cpp">
       <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="CFileTransferManager.cpp">
+      <Filter>Source Files\Network</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
